--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <link rel="stylesheet" media="all" href="css/web-1750127dc868790469d0f05494c7fa5851b052d78eaa5615702a010574dc5afd.css" data-turbolinks-track="true" />
+    <link rel="stylesheet" media="all" href="css/styles.css" data-turbolinks-track="true" />
 
     <script src="js/jquery-1.12.4.min.js"></script>
 <script>
