--- a/about.html
+++ b/about.html
@@ -69,6 +69,8 @@
             
             <li class="nav-link"><a class="text-decoration-on-hover" href="contact.html">Contact</a></li>
 
+            <li class="nav-link"><a class="btn btn-dark" href="signup.html" style="color: #fff;">SIGNUP</a></li>
+
             <div class='nav-close-container'>
 
               <a href='#' class='text-decoration-none' id='nav-close'>
