--- a/how-it-works.html
+++ b/how-it-works.html
@@ -15,7 +15,7 @@
   <meta name="author" content="">
 
     
-  <title>Health Direct Global | About</title>
+  <title>Health Direct Global | How-It-Works</title>
     
   <link rel="stylesheet" media="all" href="css/styles.css" data-turbolinks-track="true" />
 
