--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <meta name="author" content="">
 
     
-  <title>Health Direct Global | About</title>
+  <title>Health Direct Global | Contact</title>
     
   <link rel="stylesheet" media="all" href="css/styles.css" data-turbolinks-track="true" />
 
