--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
 
             <li class="nav-link">
 
-              <a active_class="text-decoration-none active" inactive_class="text-decoration-none" class="text-decoration-none" href="/"><img style="height: 2.8rem;" class="transition-brightness" src="images/hdg.png" /></a>
+              <a active_class="text-decoration-none active" inactive_class="text-decoration-none" class="text-decoration-none" href="index.html"><img style="height: 2.8rem;" class="transition-brightness" src="images/hdg.png" /></a>
 
             </li>
 
